k8s-manifests/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: svignesh2409/quick-store-auth-service
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-srv
spec:
  selector:
    app: auth-service
  ports:
    - name: auth-ports
      protocol: TCP
      port: 4000
      targetPort: 4000
