k8s-manifests/delivery-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
        - name: delivery-service
          image: svignesh2409/quick-store-delivery-service:v18
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service-srv
spec:
  selector:
    app: delivery-service
  ports:
    - name: delivery-ports
      protocol: TCP
      port: 4005
      targetPort: 4005
