k8s-manifests/order-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: svignesh2409/quick-store-order-service
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-srv
spec:
  selector:
    app: order-service
  ports:
    - name: order-ports
      protocol: TCP
      port: 4003
      targetPort: 4003
