k8s-manifests/products-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
        - name: products-service
          image: svignesh2409/quick-store-products-service
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: products-service-srv
spec:
  selector:
    app: products-service
  ports:
    - name: products-ports
      protocol: TCP
      port: 4002
      targetPort: 4002
