k8s-manifests/user-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: svignesh2409/quick-store-user-service
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-srv
spec:
  selector:
    app: user-service
  ports:
    - name: user-ports
      protocol: TCP
      port: 4001
      targetPort: 4001
