k8s-manifests/ingress-nginx-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http:/thestore.pw, https://thestore.pw"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
    - host: thestore.pw
      http:
        paths:
          - path: /socket.io
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 3001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  number: 3000
  tls:
  - hosts:
    - thestore.pw
    secretName: thestorepw-tls
